# idoven-challenge

./: .env  Dockerfile  Makefile  README.md  docker-compose.yaml  init.sql  pyproject.toml
idoven_app/: .env  main.py  pyproject.toml
idoven_app/idoven/: config.py  main.py
idoven_app/idoven/api/v1/: auth.py  health.py
idoven_app/idoven/api/v1/ecg/: ecg_request.py  insights_ecg_router.py  register_ecg_router.py
idoven_app/idoven/api/v1/user/: register_user_router.py  user_request.py
idoven_app/idoven/domain/: command_handler.py  ecg.py  ecg_repository.py  user.py  user_repository.py
idoven_app/idoven/infrastructure/: in_memory_ecg_repository.py  in_memory_user_repository.py  mongo_ecg_repository.py  postgres_user_repository.py
idoven_app/idoven/use_cases/: find_user_command.py  insights_ecg_command.py  register_ecg_command.py  register_user_command.py
idoven_app/tests/acceptance/: test_insights_ecg_router.py  test_register_ecg_router.py  test_register_user_router.py
idoven_app/tests/helper/: test_builder.py  test_user_builder.py
idoven_app/tests/integration/: test_mongo_ecg_repository.py  test_postgres_user_repository.py
idoven_app/tests/unit/domain/: test_ecg.py  test_in_memory_ecg_repository.py  test_user.py
idoven_app/tests/unit/infrastructure/: test_in_memory_ecg_repository.py  test_in_memory_user_repository.py
idoven_app/tests/unit/use_cases/: test_find_user_command_handler.py  test_insights_ecg_command_handler.py  test_register_ecg_command_handler.py  test_register_user_command_handler.py
mongo-seed/: Dockerfile  ecg_seed.json
